syntax = "proto3";

package chat;

option go_package = "github.com/ArtemySavostov/chat-protos/chat";

service ChatService {
 
  rpc SubscribeToRoom (SubscribeToRoomRequest) returns (stream ChatMessage) {}

 
  rpc SendMessage (ChatMessage) returns (SendMessageResponse) {}

 
  rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse) {}
}


message SubscribeToRoomRequest {
  string room_id = 1;  
  string client_id = 2; 
}


message ChatMessage {
  string room_id = 1;
  string client_id = 2;
  string text = 3;     
  int64 timestamp = 4;  
}


message SendMessageResponse {
  bool success = 1;
  string error = 2; 
}


message CreateRoomRequest {
  string room_name = 1; 
  string client_id = 2; 
}


message CreateRoomResponse {
  string room_id = 1;
  bool success = 2;
  string error = 3;
}